syntax = "proto3";

package services;

option go_package = "/services;services";


service User {
  rpc GetProfileUser (GetProfileUserRequest) returns (GetProfileUserResponse);
}

message GetProfileUserRequest {
  string name = 1;
}

message GetProfileUserResponse {
  string message = 1;
}
